# fumi-tools

./: .gitignore  .gitlab-ci.yml  .gitmodules  .releaserc  .releaserc.build  .releaserc.deploy  CMakeLists.txt  LICENSE  README.md  build.sh  package-lock.json  publish.sh
.github/workflows/: release.yml
CMake/: CMakeUtils.cmake  ExternalZLib.cmake  External_cppformat.cmake  External_htslib.cmake  External_jemalloc.cmake  GlobalCompilerFlags.cmake  ZLibCMakeLists.patch
conda-recipe/: build.sh  install_lib.sh  meta.yaml
cross_compile/: toolchain.patch
include/: CMakeLists.txt
include/fumi_tools/: CMakeLists.txt  cast_helper.hpp  dedup.hpp  helper.hpp  sample_index_map.hpp  umi_clusterer.hpp  umi_opts.hpp  version.hpp.in
lib/rapidcsv/: rapidcsv.h
lib/robin-hood-hashing-include/robin_hood/: robin_hood.h
lib/zstr-include/zstr/: strict_fstream.hpp  zstr.hpp
lib/zstr/src/: zstr.hpp
scripts/: build.sh  make-source-tarball.sh
src/: CMakeLists.txt  dedup.cpp  demultiplex.cpp  fix_flags.cpp  main.cpp  sample_index_map.cpp  umi_clusterer.cpp
